# docs/swagger.yaml
@@ -94,11 +94,51 @@ paths:
       summary: GetFileList
       tags:
       - After Authorization
+  /api/moveFile:
+    put:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: Move a file to destination path
+      parameters:
+      - description: Authorization
+        in: header
+        name: Authorization
+        type: string
+      - description: ID
+        in: formData
+        name: id
+        required: true
+        type: integer
+      - description: To
+        in: formData
+        name: to
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{"file":{}}'
+          schema:
+            $ref: '#/definitions/router.Json200Response'
+        "400":
+          description: MoveFileForm binding error
+        "404":
+          description: '{"error":"error msg"}'
+          schema:
+            $ref: '#/definitions/router.Json404Response'
+        "500":
+          description: Token generating error
+      security:
+      - BearerIdAuth: []
+      summary: MoveFile
+      tags:
+      - After Authorization
   /api/renameFile:
     put:
       consumes:
       - application/x-www-form-urlencoded
-      description: CHange name of a ile
+      description: Change name of a file
       parameters:
       - description: Authorization
         in: header
